--- a/block-BHaabu/style.css
+++ b/block-BHaabu/style.css
@@ -63,19 +63,52 @@ table {
 body {
     font-size: 16px;
     line-height: 1.7;
+    background: url(media/scenery.png) no-repeat;
+    background-size: cover;
+    padding-bottom: 30px;
+
 }
 .flex {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
-
-.background {
-    background-image: url(media/scenery.png);
-    height: 500px;
+.center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
+
 .box {
     width: 30%;
-    background-color: crimson;
-    height: 230px;
+    background-color: white;
+    height: 200px;
+    color: white;
+    border-radius: 6px;
+}
+.margin-top {
+    margin-top: 30px;
+}
+/*Header*/
+
+h1 {
+    font-size: 30px;
+    text-align: center;
+    padding: 30px;
+    color: white;
+}
+.box1 {
+    background: crimson;
+}
+.box2 {
+    background: linear-gradient(to right, black, crimson);
+}
+.box3 {
+    background: radial-gradient(crimson, black)
+}
+.big-box {
+    
+    background: linear-gradient(to right bottom, transparent, crimson), url(media/small.png) no-repeat;
+    width: 100%;
+    background-size: cover;
 }
